# fastapi-crewai

./: Makefile  requirements.in  requirements.txt
lumapps_poc/: README.md  pyproject.toml  report.md
lumapps_poc/src/lumapps_poc/adapters/: endpoints.py
lumapps_poc/src/lumapps_poc/adapters/tools/: human_tool.py
lumapps_poc/src/lumapps_poc/entrypoints/: main.py  runner.py
lumapps_poc/src/lumapps_poc/infrastructure/: http_server.py  run_context.py  state_manager.py
lumapps_poc/src/lumapps_poc/usecase/: crew.py
lumapps_poc/src/lumapps_poc/usecase/config/: tasks.yaml
